# mail-smtp-mcp-rs

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml
.github/workflows/: init-npm-placeholder.yml  integration.yml  publish-docker.yml  release.yml
docs/: tool-contract.md
scripts/: test-greenmail-mcp-inspector.sh  test-greenmail.sh
src/: config.rs  errors.rs  lib.rs  main.rs  policy.rs  server.rs  startup.rs  validation.rs
tests/: smtp_greenmail.rs
