[package]
name = "mail-smtp-mcp-rs"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Secure SMTP MCP server over stdio with multi-account support, and TLS-only connections"
repository = "https://github.com/bradsjm/mail-smtp-mcp-rs"
readme = "README.md"
keywords = ["mcp", "smtp", "email", "mail", "protocol"]
categories = ["email", "api-bindings"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
regex = "1"
rmcp = { version = "1.3", features = ["server", "transport-io", "schemars", "macros"] }
schemars = { version = "1.2", features = ["chrono04", "uuid1"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
futures-util = "0.3"
mailparse = "0.16.1"
serial_test = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["blocking"] }

[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
